[project]
name = "oss-contribution-finder"
version = "0.1.0"
description = "Search GitHub issues by skill, filter by difficulty, and find your first open-source contribution."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]
